Added Empty TableView and Cells to ViewControllers

--- a/Automotive/Base.lproj/Main.storyboard
+++ b/Automotive/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--FavouriteVC-->
         <scene sceneID="R0z-vV-lti">
             <objects>
-                <viewController id="334-vH-ruc" customClass="FavouriteVC" customModule="Automotive" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="334-vH-ruc" customClass="FavouriteVC" customModule="Automotive" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="UFo-Mr-bAH"/>
                         <viewControllerLayoutGuide type="bottom" id="ise-LA-x0S"/>
@@ -20,18 +20,47 @@
                     <view key="view" contentMode="scaleToFill" id="M3c-ds-XY3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="c1q-Xb-b0p">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FavCellIdentifier" id="lgf-1G-hxY">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lgf-1G-hxY" id="elp-pJ-m56">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="334-vH-ruc" id="Xvj-D5-AK0"/>
+                                    <outlet property="delegate" destination="334-vH-ruc" id="ga4-6b-hvi"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="c1q-Xb-b0p" firstAttribute="top" secondItem="UFo-Mr-bAH" secondAttribute="bottom" id="1OI-GJ-QJi"/>
+                            <constraint firstItem="ise-LA-x0S" firstAttribute="top" secondItem="c1q-Xb-b0p" secondAttribute="bottom" id="hNg-DU-rji"/>
+                            <constraint firstAttribute="trailing" secondItem="c1q-Xb-b0p" secondAttribute="trailing" id="tN3-Fh-IOO"/>
+                            <constraint firstItem="c1q-Xb-b0p" firstAttribute="leading" secondItem="M3c-ds-XY3" secondAttribute="leading" id="urQ-Zo-NLc"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qb8-iU-fAa"/>
+                    <connections>
+                        <outlet property="favTableView" destination="c1q-Xb-b0p" id="e5B-cO-seJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="czV-Es-uRZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2015.2" y="159.67016491754123"/>
+            <point key="canvasLocation" x="2015.2" y="158.77061469265368"/>
         </scene>
         <!--ListingVC-->
         <scene sceneID="cbQ-dC-kvh">
             <objects>
-                <viewController id="knJ-gn-smy" customClass="ListingVC" customModule="Automotive" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="knJ-gn-smy" customClass="ListingVC" customModule="Automotive" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kun-IO-ffV"/>
                         <viewControllerLayoutGuide type="bottom" id="IgM-dU-NaN"/>
@@ -39,9 +68,38 @@
                     <view key="view" contentMode="scaleToFill" id="rEt-DB-cni">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QJB-f6-TjK">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CarCelldentifier" id="PCP-e0-kqM">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PCP-e0-kqM" id="e4p-sz-7L2">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="knJ-gn-smy" id="uhg-Yb-vtM"/>
+                                    <outlet property="delegate" destination="knJ-gn-smy" id="PLl-co-F1F"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QJB-f6-TjK" firstAttribute="leading" secondItem="rEt-DB-cni" secondAttribute="leading" id="A9I-w9-3Wd"/>
+                            <constraint firstItem="IgM-dU-NaN" firstAttribute="top" secondItem="QJB-f6-TjK" secondAttribute="bottom" id="LDK-aP-mCy"/>
+                            <constraint firstAttribute="trailing" secondItem="QJB-f6-TjK" secondAttribute="trailing" id="WGw-xD-BLb"/>
+                            <constraint firstItem="QJB-f6-TjK" firstAttribute="top" secondItem="kun-IO-ffV" secondAttribute="bottom" id="s3j-qU-bUx"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9qT-qY-rYi"/>
+                    <connections>
+                        <outlet property="carsTableView" destination="QJB-f6-TjK" id="CPw-7j-s4x"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VoU-9x-ZaG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
