--- a/Automotive/Views/FavTableViewCell.xib
+++ b/Automotive/Views/FavTableViewCell.xib
@@ -1,19 +1,128 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FavTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="176" id="KGk-i7-Jjw" customClass="FavTableViewCell" customModule="Automotive" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2S1-XJ-K4E">
+                        <rect key="frame" x="6" y="8" width="100" height="100"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year: 02/2017" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vzy-GM-CMJ">
+                        <rect key="frame" x="114" y="32" width="79" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="fs9-sV-NSd"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BMW" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2J-PN-7ah">
+                        <rect key="frame" x="114" y="8" width="198" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="UdL-5P-ikg"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fuel Type: Benzin" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83N-Sd-fuD">
+                        <rect key="frame" x="218" y="56" width="97" height="21"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="209,000 km" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9r-Ag-oiE">
+                        <rect key="frame" x="114" y="56" width="66" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="av5-s5-fHq"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9BY-e8-0IR">
+                        <rect key="frame" x="114" y="85" width="198" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="6UJ-fe-Hk9"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
+                        <inset key="contentEdgeInsets" minX="-75" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <state key="normal" title="Berlin Address Map" image="locationImage">
+                            <color key="titleColor" red="0.01282667648" green="0.4770217538" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VbW-mt-KS7">
+                        <rect key="frame" x="287" y="115" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="ey1-nT-ngw"/>
+                        </constraints>
+                        <state key="normal" image="deleteImage"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="€100,000,000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FLb-e1-hqh">
+                        <rect key="frame" x="227" y="32" width="85" height="21"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottomMargin" secondItem="VbW-mt-KS7" secondAttribute="bottom" constant="5" id="26F-hs-s6d"/>
+                    <constraint firstItem="9BY-e8-0IR" firstAttribute="top" secondItem="N9r-Ag-oiE" secondAttribute="bottom" constant="8" symbolic="YES" id="2XN-eL-YNp"/>
+                    <constraint firstItem="N9r-Ag-oiE" firstAttribute="baseline" secondItem="83N-Sd-fuD" secondAttribute="baseline" id="6kp-dJ-ihw"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="2S1-XJ-K4E" secondAttribute="bottom" constant="37" id="6x4-mV-lKt"/>
+                    <constraint firstItem="u2J-PN-7ah" firstAttribute="leading" secondItem="2S1-XJ-K4E" secondAttribute="trailing" constant="8" symbolic="YES" id="Cu7-lO-BlV"/>
+                    <constraint firstItem="2S1-XJ-K4E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="ERh-yl-yZn"/>
+                    <constraint firstItem="2S1-XJ-K4E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-2" id="JzZ-UG-N2p"/>
+                    <constraint firstItem="N9r-Ag-oiE" firstAttribute="firstBaseline" secondItem="83N-Sd-fuD" secondAttribute="firstBaseline" id="LQf-6K-Ke0"/>
+                    <constraint firstItem="vzy-GM-CMJ" firstAttribute="top" secondItem="u2J-PN-7ah" secondAttribute="bottom" constant="3" id="MZ1-Gz-ci1"/>
+                    <constraint firstItem="u2J-PN-7ah" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="PJW-9s-kwv"/>
+                    <constraint firstItem="u2J-PN-7ah" firstAttribute="leading" secondItem="vzy-GM-CMJ" secondAttribute="leading" id="S9b-Jp-Aar"/>
+                    <constraint firstItem="vzy-GM-CMJ" firstAttribute="leading" secondItem="N9r-Ag-oiE" secondAttribute="leading" id="Tzm-Xr-4cK"/>
+                    <constraint firstItem="N9r-Ag-oiE" firstAttribute="leading" secondItem="9BY-e8-0IR" secondAttribute="leading" id="ZdO-BS-WJz"/>
+                    <constraint firstItem="vzy-GM-CMJ" firstAttribute="baseline" secondItem="FLb-e1-hqh" secondAttribute="baseline" id="crE-61-7N8"/>
+                    <constraint firstItem="VbW-mt-KS7" firstAttribute="top" secondItem="9BY-e8-0IR" secondAttribute="bottom" constant="8" symbolic="YES" id="fgv-cR-VL9"/>
+                    <constraint firstItem="2S1-XJ-K4E" firstAttribute="top" secondItem="u2J-PN-7ah" secondAttribute="top" id="hiw-cy-zUx"/>
+                    <constraint firstItem="vzy-GM-CMJ" firstAttribute="top" secondItem="FLb-e1-hqh" secondAttribute="top" id="iPc-Ir-mY2"/>
+                    <constraint firstItem="9BY-e8-0IR" firstAttribute="trailing" secondItem="VbW-mt-KS7" secondAttribute="trailing" id="jhG-A9-SpJ"/>
+                    <constraint firstItem="u2J-PN-7ah" firstAttribute="trailing" secondItem="FLb-e1-hqh" secondAttribute="trailing" id="kmV-lU-mKB"/>
+                    <constraint firstItem="FLb-e1-hqh" firstAttribute="leading" secondItem="vzy-GM-CMJ" secondAttribute="trailing" constant="34" id="lOR-zb-0X1"/>
+                    <constraint firstItem="83N-Sd-fuD" firstAttribute="leading" secondItem="N9r-Ag-oiE" secondAttribute="trailing" constant="38" id="mCA-Om-OAR"/>
+                    <constraint firstItem="FLb-e1-hqh" firstAttribute="trailing" secondItem="9BY-e8-0IR" secondAttribute="trailing" id="puO-Vs-j7c"/>
+                    <constraint firstItem="N9r-Ag-oiE" firstAttribute="top" secondItem="vzy-GM-CMJ" secondAttribute="bottom" constant="3" id="vqy-KF-ONe"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="carImageView" destination="2S1-XJ-K4E" id="ZGB-RR-4zJ"/>
+                <outlet property="deleteButton" destination="VbW-mt-KS7" id="R6s-Tq-tib"/>
+                <outlet property="fuelTypeLabel" destination="83N-Sd-fuD" id="Ui8-V2-bcA"/>
+                <outlet property="imageView" destination="2S1-XJ-K4E" id="x1C-jb-5Mk"/>
+                <outlet property="mapAddressButton" destination="9BY-e8-0IR" id="EhK-NM-hQh"/>
+                <outlet property="milageLabel" destination="N9r-Ag-oiE" id="aG8-tk-ILO"/>
+                <outlet property="modelLabel" destination="u2J-PN-7ah" id="XWu-Fg-rKb"/>
+                <outlet property="priceLabel" destination="FLb-e1-hqh" id="U8Q-NZ-Jyf"/>
+                <outlet property="yearLabel" destination="vzy-GM-CMJ" id="Pgm-b1-3zy"/>
+            </connections>
+            <point key="canvasLocation" x="35" y="153"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="deleteImage" width="30" height="30"/>
+        <image name="locationImage" width="15" height="15"/>
+    </resources>
 </document>
