--- a/Automotive/Views/CarTableViewCell.xib
+++ b/Automotive/Views/CarTableViewCell.xib
@@ -1,19 +1,163 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CarTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CarCellIdentifier" id="KGk-i7-Jjw" customClass="CarTableViewCell" customModule="Automotive" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="378"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="377"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xoq-jG-ubn">
+                        <rect key="frame" x="8" y="12" width="304" height="360"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tm2-Sq-E5w" customClass="ImageSlideshow" customModule="ImageSlideshow">
+                                <rect key="frame" x="0.0" y="0.0" width="304" height="200"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="36C-PS-qlQ"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BMW" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M3F-en-WuV">
+                                <rect key="frame" x="8" y="208" width="288" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Oi9-dA-HpJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year: 02/2017" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dXH-oZ-j0H">
+                                <rect key="frame" x="8" y="237" width="90" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="5Ny-EQ-y7L"/>
+                                    <constraint firstAttribute="height" constant="21" id="Cdq-Jd-byn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="€100,000,000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZ2-Cg-kNL">
+                                <rect key="frame" x="185" y="237" width="111" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Sw0-LB-A39"/>
+                                    <constraint firstAttribute="width" constant="111" id="Uk6-L4-tQC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="209,000 km" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="chg-34-D99">
+                                <rect key="frame" x="8" y="262" width="90" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="l8Y-Vw-ayd"/>
+                                    <constraint firstAttribute="width" constant="90" id="sw7-ed-DZ2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fuel Type: Benzin" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oMs-vD-Hv3">
+                                <rect key="frame" x="185" y="262" width="111" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="trO-sp-VbS"/>
+                                    <constraint firstAttribute="width" constant="111" id="zAO-la-4EG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="65y-Po-Xkb">
+                                <rect key="frame" x="8" y="294" width="230" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="oCh-GF-Nb0"/>
+                                    <constraint firstAttribute="width" constant="230" id="uD0-GK-kMI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
+                                <inset key="contentEdgeInsets" minX="-100" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Berlin Address Map" image="locationImage">
+                                    <color key="titleColor" red="0.01282667648" green="0.4770217538" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LFq-M1-mko">
+                                <rect key="frame" x="247" y="324" width="51" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="49" id="XuB-W4-Ppb"/>
+                                    <constraint firstAttribute="height" constant="31" id="nLo-Tp-WV8"/>
+                                </constraints>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favourite:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ao-sX-JbX">
+                                <rect key="frame" x="166" y="329" width="73" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="73" id="QJO-vn-rdt"/>
+                                    <constraint firstAttribute="height" constant="21" id="TRU-Cq-59w"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="oMs-vD-Hv3" secondAttribute="trailing" constant="8" id="0Wr-yn-bKZ"/>
+                            <constraint firstAttribute="height" constant="360" id="0rA-D1-TtZ"/>
+                            <constraint firstItem="M3F-en-WuV" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="39N-ac-t5Y"/>
+                            <constraint firstAttribute="bottom" secondItem="9Ao-sX-JbX" secondAttribute="bottom" constant="10" id="3OQ-Ir-c7Y"/>
+                            <constraint firstItem="cZ2-Cg-kNL" firstAttribute="top" secondItem="M3F-en-WuV" secondAttribute="bottom" constant="8" id="6k2-ou-ie3"/>
+                            <constraint firstItem="65y-Po-Xkb" firstAttribute="top" secondItem="chg-34-D99" secondAttribute="bottom" constant="11" id="HRg-Vt-O0D"/>
+                            <constraint firstItem="chg-34-D99" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="JJN-jS-l59"/>
+                            <constraint firstAttribute="trailing" secondItem="cZ2-Cg-kNL" secondAttribute="trailing" constant="8" id="Lu0-Sx-z9Q"/>
+                            <constraint firstAttribute="trailing" secondItem="LFq-M1-mko" secondAttribute="trailing" constant="8" id="Pvo-j1-mBB"/>
+                            <constraint firstItem="LFq-M1-mko" firstAttribute="leading" secondItem="9Ao-sX-JbX" secondAttribute="trailing" constant="8" id="Q6K-0o-fPS"/>
+                            <constraint firstItem="Tm2-Sq-E5w" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" id="SoI-Dy-Zrr"/>
+                            <constraint firstItem="Tm2-Sq-E5w" firstAttribute="top" secondItem="Xoq-jG-ubn" secondAttribute="top" id="TdN-r0-7Cq"/>
+                            <constraint firstItem="oMs-vD-Hv3" firstAttribute="top" secondItem="cZ2-Cg-kNL" secondAttribute="bottom" constant="4" id="U4Z-Cc-PhG"/>
+                            <constraint firstItem="M3F-en-WuV" firstAttribute="top" secondItem="Tm2-Sq-E5w" secondAttribute="bottom" constant="8" id="Xuo-95-oDq"/>
+                            <constraint firstAttribute="trailing" secondItem="Tm2-Sq-E5w" secondAttribute="trailing" id="ZKX-qI-xuZ"/>
+                            <constraint firstItem="65y-Po-Xkb" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="cft-ym-M8Q"/>
+                            <constraint firstAttribute="bottom" secondItem="LFq-M1-mko" secondAttribute="bottom" constant="5" id="fWH-Xm-Rtd"/>
+                            <constraint firstItem="chg-34-D99" firstAttribute="top" secondItem="dXH-oZ-j0H" secondAttribute="bottom" constant="4" id="i2t-j0-Cd4"/>
+                            <constraint firstItem="9Ao-sX-JbX" firstAttribute="top" secondItem="65y-Po-Xkb" secondAttribute="bottom" constant="13" id="pAL-XS-Wvr"/>
+                            <constraint firstItem="65y-Po-Xkb" firstAttribute="top" secondItem="oMs-vD-Hv3" secondAttribute="bottom" constant="11" id="pFh-lu-ZFk"/>
+                            <constraint firstAttribute="trailing" secondItem="M3F-en-WuV" secondAttribute="trailing" constant="8" id="sAy-A9-uJP"/>
+                            <constraint firstItem="dXH-oZ-j0H" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="t6s-Rp-y0t"/>
+                            <constraint firstItem="dXH-oZ-j0H" firstAttribute="top" secondItem="M3F-en-WuV" secondAttribute="bottom" constant="8" id="uxy-m0-aTu"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" red="0.94108384847640991" green="0.94124144315719604" blue="0.94106310606002808" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <constraints>
+                    <constraint firstItem="Xoq-jG-ubn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="0Dc-bS-5uu"/>
+                    <constraint firstAttribute="trailing" secondItem="Xoq-jG-ubn" secondAttribute="trailing" constant="8" id="xIi-O1-Ci5"/>
+                    <constraint firstItem="Xoq-jG-ubn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="y2t-f4-dwr"/>
+                    <constraint firstAttribute="bottom" secondItem="Xoq-jG-ubn" secondAttribute="bottom" constant="5" id="z32-Gl-SnP"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="favSwitch" destination="LFq-M1-mko" id="EJ6-C8-7Uj"/>
+                <outlet property="fuelTypeLabel" destination="oMs-vD-Hv3" id="41H-vI-O3k"/>
+                <outlet property="imageSlideView" destination="Tm2-Sq-E5w" id="EyK-D0-Int"/>
+                <outlet property="mainView" destination="Xoq-jG-ubn" id="9Oj-Gj-qL4"/>
+                <outlet property="mapAddressButton" destination="65y-Po-Xkb" id="sdf-Tj-1eN"/>
+                <outlet property="mileageLabel" destination="chg-34-D99" id="AXn-xZ-wMa"/>
+                <outlet property="modelLabel" destination="M3F-en-WuV" id="TUc-gB-ptC"/>
+                <outlet property="priceLabel" destination="cZ2-Cg-kNL" id="HOx-ec-hI4"/>
+                <outlet property="yearLabel" destination="dXH-oZ-j0H" id="U9S-5u-KUf"/>
+            </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="locationImage" width="15" height="15"/>
+    </resources>
 </document>
