--- a/Automotive/Views/CarTableViewCell.xib
+++ b/Automotive/Views/CarTableViewCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="378"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="377"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="378"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xoq-jG-ubn">
@@ -77,16 +77,22 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="65y-Po-Xkb">
-                                <rect key="frame" x="8" y="294" width="230" height="22"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQL-yO-5Ma">
+                                <rect key="frame" x="26" y="297" width="263" height="21"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
+                                <color key="textColor" red="0.01282667648" green="0.4770217538" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="65y-Po-Xkb">
+                                <rect key="frame" x="8" y="295" width="288" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="oCh-GF-Nb0"/>
-                                    <constraint firstAttribute="width" constant="230" id="uD0-GK-kMI"/>
+                                    <constraint firstAttribute="width" constant="288" id="uD0-GK-kMI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="13"/>
-                                <inset key="contentEdgeInsets" minX="-100" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="Berlin Address Map" image="locationImage">
+                                <inset key="imageEdgeInsets" minX="-275" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" image="locationImage">
                                     <color key="titleColor" red="0.01282667648" green="0.4770217538" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
@@ -107,29 +113,43 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="accidentImage" translatesAutoresizingMaskIntoConstraints="NO" id="uIz-01-BkR">
+                                <rect key="frame" x="8" y="325" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="I70-Bs-Fcm"/>
+                                    <constraint firstAttribute="height" constant="30" id="aW0-vE-LPa"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="oMs-vD-Hv3" secondAttribute="trailing" constant="8" id="0Wr-yn-bKZ"/>
                             <constraint firstAttribute="height" constant="360" id="0rA-D1-TtZ"/>
+                            <constraint firstItem="uIz-01-BkR" firstAttribute="top" secondItem="65y-Po-Xkb" secondAttribute="bottom" constant="8" id="15h-HE-vDn"/>
                             <constraint firstItem="M3F-en-WuV" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="39N-ac-t5Y"/>
                             <constraint firstAttribute="bottom" secondItem="9Ao-sX-JbX" secondAttribute="bottom" constant="10" id="3OQ-Ir-c7Y"/>
                             <constraint firstItem="cZ2-Cg-kNL" firstAttribute="top" secondItem="M3F-en-WuV" secondAttribute="bottom" constant="8" id="6k2-ou-ie3"/>
-                            <constraint firstItem="65y-Po-Xkb" firstAttribute="top" secondItem="chg-34-D99" secondAttribute="bottom" constant="11" id="HRg-Vt-O0D"/>
+                            <constraint firstAttribute="bottom" secondItem="uIz-01-BkR" secondAttribute="bottom" constant="5" id="78C-iP-4sR"/>
+                            <constraint firstItem="65y-Po-Xkb" firstAttribute="top" secondItem="chg-34-D99" secondAttribute="bottom" constant="12" id="HRg-Vt-O0D"/>
                             <constraint firstItem="chg-34-D99" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="JJN-jS-l59"/>
+                            <constraint firstAttribute="trailing" secondItem="RQL-yO-5Ma" secondAttribute="trailing" constant="15" id="K7t-l0-cOc"/>
                             <constraint firstAttribute="trailing" secondItem="cZ2-Cg-kNL" secondAttribute="trailing" constant="8" id="Lu0-Sx-z9Q"/>
                             <constraint firstAttribute="trailing" secondItem="LFq-M1-mko" secondAttribute="trailing" constant="8" id="Pvo-j1-mBB"/>
                             <constraint firstItem="LFq-M1-mko" firstAttribute="leading" secondItem="9Ao-sX-JbX" secondAttribute="trailing" constant="8" id="Q6K-0o-fPS"/>
                             <constraint firstItem="Tm2-Sq-E5w" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" id="SoI-Dy-Zrr"/>
                             <constraint firstItem="Tm2-Sq-E5w" firstAttribute="top" secondItem="Xoq-jG-ubn" secondAttribute="top" id="TdN-r0-7Cq"/>
                             <constraint firstItem="oMs-vD-Hv3" firstAttribute="top" secondItem="cZ2-Cg-kNL" secondAttribute="bottom" constant="4" id="U4Z-Cc-PhG"/>
+                            <constraint firstItem="uIz-01-BkR" firstAttribute="top" secondItem="RQL-yO-5Ma" secondAttribute="bottom" constant="7" id="VYC-Eb-YJY"/>
+                            <constraint firstItem="uIz-01-BkR" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="Xl5-ek-40q"/>
                             <constraint firstItem="M3F-en-WuV" firstAttribute="top" secondItem="Tm2-Sq-E5w" secondAttribute="bottom" constant="8" id="Xuo-95-oDq"/>
                             <constraint firstAttribute="trailing" secondItem="Tm2-Sq-E5w" secondAttribute="trailing" id="ZKX-qI-xuZ"/>
                             <constraint firstItem="65y-Po-Xkb" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="cft-ym-M8Q"/>
+                            <constraint firstItem="RQL-yO-5Ma" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="26" id="d4H-vG-oW8"/>
+                            <constraint firstItem="RQL-yO-5Ma" firstAttribute="centerY" secondItem="65y-Po-Xkb" secondAttribute="centerY" constant="1.5" id="e05-kL-eLb"/>
                             <constraint firstAttribute="bottom" secondItem="LFq-M1-mko" secondAttribute="bottom" constant="5" id="fWH-Xm-Rtd"/>
                             <constraint firstItem="chg-34-D99" firstAttribute="top" secondItem="dXH-oZ-j0H" secondAttribute="bottom" constant="4" id="i2t-j0-Cd4"/>
-                            <constraint firstItem="9Ao-sX-JbX" firstAttribute="top" secondItem="65y-Po-Xkb" secondAttribute="bottom" constant="13" id="pAL-XS-Wvr"/>
-                            <constraint firstItem="65y-Po-Xkb" firstAttribute="top" secondItem="oMs-vD-Hv3" secondAttribute="bottom" constant="11" id="pFh-lu-ZFk"/>
+                            <constraint firstItem="9Ao-sX-JbX" firstAttribute="top" secondItem="65y-Po-Xkb" secondAttribute="bottom" constant="12" id="pAL-XS-Wvr"/>
+                            <constraint firstItem="65y-Po-Xkb" firstAttribute="top" secondItem="oMs-vD-Hv3" secondAttribute="bottom" constant="12" id="pFh-lu-ZFk"/>
                             <constraint firstAttribute="trailing" secondItem="M3F-en-WuV" secondAttribute="trailing" constant="8" id="sAy-A9-uJP"/>
                             <constraint firstItem="dXH-oZ-j0H" firstAttribute="leading" secondItem="Xoq-jG-ubn" secondAttribute="leading" constant="8" id="t6s-Rp-y0t"/>
                             <constraint firstItem="dXH-oZ-j0H" firstAttribute="top" secondItem="M3F-en-WuV" secondAttribute="bottom" constant="8" id="uxy-m0-aTu"/>
@@ -145,6 +165,8 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="accidentImageView" destination="uIz-01-BkR" id="Jz8-I9-OxW"/>
+                <outlet property="addressLabel" destination="RQL-yO-5Ma" id="7dm-4J-ZoO"/>
                 <outlet property="favSwitch" destination="LFq-M1-mko" id="EJ6-C8-7Uj"/>
                 <outlet property="fuelTypeLabel" destination="oMs-vD-Hv3" id="41H-vI-O3k"/>
                 <outlet property="imageSlideView" destination="Tm2-Sq-E5w" id="EyK-D0-Int"/>
@@ -158,6 +180,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="accidentImage" width="30" height="30"/>
         <image name="locationImage" width="15" height="15"/>
     </resources>
 </document>
